# rclone

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: poetry-build.yml
rclone/: __init__.py  rclone.py
