[tool.poetry]
name = "rclone"
version = "0.4.3"
description = "Python wrapper for rclone"
authors = ["Alyetama <56323389+Alyetama@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
loguru = ">=0.5.3"
tqdm = ">=4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
